  Plugin and demo JMinor dependencies now based on the current version in build.properties, ivysettings.xml added, artifactory settings in build.properties
  build.xml, deploy_server and deploy_server_monitor targets improved, no longer create duplicate jminor library jars
  EntityRESTService, minor parameter name change
  LocalEntityConnection.setForeignKeyValues() renamed to setForeignKeys()
  RemoteEntityConnectionProvider.RemoteEntityConnectionHandler.invoke() synchronized
  EntityConnectionServerAdmin, ServerMonitor, added monitoring of GC events and thread count
  Entity.getInt() renamed to getInteger(), getChar() renamed to getCharacter(), for consistency
  EntityUtil, renamed a few methods in accordance with recent changes
  Properties.booleaProperty(propertyID, columnType) added
  InputProviderPanel, ESC key now works like clicking the cancel button
  InpurProviderPanel generified and improved a bit
  NumberField bug fixed, field did not accept the minus sign
  SizedDocument no longer allows use of setDocumentFilter(), setDocumentFilterInternal() added for subclasses
  SizedDocument now uses DocumentCase enum for controlling case conversion
  EntityConnectionProvider.ConnectionWrapper removed along with EntityConnectionProviders.connectionProvider(EntityConnection)
  Entity.Definition.setTableName() added
  DefaultEntityApplicationModel.loadDomainModel() now throws ClassNotFoundException
  EntityConnection.Type enum added along with EntityConnection.getType() and EntityConnectionProvider.getConnectionType()
  DefaultEntityConnectionServerAdmin, error handling on startup improved
  LocalEntityConnection.getSelectSQL() improved, no need to check if queries created by the framework contain the where keyword
  Entity.Definition.setSelectQuery(), added containsWhereClause parameter
  Entities.selectQueryContainsWhereClause() added
  LocalEntityConnection.containsWhereClause() removed, now uses the above
  DefaultEntityLookupModel, added parameter validation